<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="player">Плеер</string>

    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>

    <string name="share_app_message">https://practicum.yandex.ru/android-developer/</string>

    <string name="email">kovalevap2019@gmail.com</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="terms_url">https://yandex.ru/legal/practicum_offer/ru/</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error_full">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>

    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="country">Страна</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>

    <string name="playlists">Плейлисты</string>
    <string name="favorites">Избранные треки</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="create_playlist">Новый плейлист</string>
</resources>