<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.hfad.playlistmaker.search.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_search_to_player"
            app:destination="@id/audioPlayerFragment" />
    </fragment>

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.hfad.playlistmaker.media.ui.MediaFragment"
        android:label="@string/media"
        tools:layout="@layout/fragment_media" />

    <fragment
        android:id="@+id/settingFragment"
        android:name="com.hfad.playlistmaker.settings.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.hfad.playlistmaker.player.ui.AudioPlayerFragment"
        android:label="@string/player"
        tools:layout="@layout/fragment_audio_player" />

</navigation>