<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_horizontal_main"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/margin_between_elements">

        <TextView
            style="@style/MainMenuScreenTitleStyle"
            android:layout_marginTop="@dimen/margin_top_title"
            android:layout_marginBottom="@dimen/margin_bottom_title"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_bottom_buttons_container"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            style="@style/MainMenuButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/button_media"
            style="@style/MainMenuButtonStyle"
            android:layout_marginTop="@dimen/margin_top_between_buttons"
            android:text="@string/media"
            app:icon="@drawable/ic_media_library" />

        <Button
            android:id="@+id/button_setting"
            style="@style/MainMenuButtonStyle"
            android:layout_marginTop="@dimen/margin_top_between_buttons"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />

    </LinearLayout>

</LinearLayout>