<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/padding_horizontal_main"
        android:paddingVertical="@dimen/padding_vertical_header">

        <TextView
            style="@style/SettingsTitleStyle"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_settings_container"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_top_settings">

        <LinearLayout style="@style/SettingsItemContainerStyle">

            <TextView
                style="@style/SettingsItemTextStyle"
                android:text="@string/dark_theme" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/theme_switch"
                android:layout_width="@dimen/switch_width"
                android:layout_height="@dimen/switch_height"
                android:scaleX="0.85"
                android:scaleY="0.85"
                android:theme="@style/SettingsSwitchStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_button"
            style="@style/SettingsItemContainerStyle">

            <TextView
                style="@style/SettingsItemTextStyle"
                android:text="@string/share_app" />

            <ImageView
                style="@style/SettingsIconStyle"
                android:src="@drawable/ic_share" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/support_button"
            style="@style/SettingsItemContainerStyle">

            <TextView
                style="@style/SettingsItemTextStyle"
                android:text="@string/support" />

            <ImageView
                style="@style/SettingsIconStyle"
                android:src="@drawable/ic_support" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/terms_button"
            style="@style/SettingsItemContainerStyle">

            <TextView
                style="@style/SettingsItemTextStyle"
                android:text="@string/terms" />

            <ImageView
                style="@style/SettingsIconStyle"
                android:src="@drawable/ic_arrow_forward" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>